@@ -1,3 +1,7 @@
+2016-08-26  Natalia Portillo  <claunia@claunia.com>
+
+	* DateHandlers.cs: Added CP/M timestamp converter.
+
 2016-08-22  Natalia Portillo  <claunia@claunia.com>
 
 	* BigEndianMarshal.cs:
